# sonarqube_unit_test

./: .gitignore  CMakeLists.txt  README.md  div.h  main.cpp  mul.h  sonar-project.properties  sub.h  sum.h
.github/workflows/: build.yml
test/: test_divide.cpp  test_mul.cpp  test_sub.cpp  test_sum.cpp
